--- a/validation_post/.env.example
+++ b/validation_post/.env.example
@@ -46,19 +46,24 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=0b0b6513be920e
+MAIL_PASSWORD=********7ae3
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="babaoussama549@gmail.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
 
 VITE_APP_NAME="${APP_NAME}"
