--- a/validation_post/.env.example
+++ b/validation_post/.env.example
@@ -55,12 +55,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 
-
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=0b0b6513be920e
-MAIL_PASSWORD=********7ae3
+MAIL_PASSWORD=5883f563567ae3
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="babaoussama549@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
